--- a/index.html
+++ b/index.html
@@ -155,26 +155,28 @@
               <img src="img/piechart.svg" alt="круговая диарамма">
             </div>
             <div class="content__item item-7">
-              <h2 class="content__title">Арендуемая техника
-                <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M15.2356 5.86455L10.6244 5.16017L8.55751 0.757671C8.40313 0.428921 7.86376 0.428921 7.70938 0.757671L5.64313 5.16017L1.03189 5.86455C0.653135 5.92267 0.501885 6.3833 0.76751 6.65517L4.11751 10.0889L3.32564 14.9433C3.26251 15.3289 3.67438 15.6183 4.01501 15.4289L8.13376 13.1527L12.2525 15.4295C12.59 15.617 13.0056 15.3333 12.9419 14.9439L12.15 10.0895L15.5 6.6558C15.7656 6.3833 15.6138 5.92267 15.2356 5.86455Z"
-                    fill="#43E8FF" />
-                </svg>
-              </h2>
-              <p class="content__subtitle">ООО “Магнат Мед”</p>
-              <div class="item-7__cont-1">
-                <h3>Экскаваторы 2020</h3>
-                <p>15 100 машин</p>
-                <p>130 областей</p>
-                <p>5 предприятий</p>
+              <h2 class="content__title">Арендуемая техника</h2>
+              <div class="item7__content">
+                <div class="item7__content-left">
+                  <p class="content__subtitle">ООО “Магнат Мед”</p>
+                  <div class="item-7__cont-1">
+                    <h3>Экскаваторы 2020</h3>
+                    <p>15 100 машин</p>
+                    <p>130 областей</p>
+                    <p>5 предприятий</p>
+                  </div>
+                  <a href="#">Добавить технику</a>
+                </div>
+                <div class="item7__content7-right">
+                  <!-- <div class="image"></div> -->
+                  <img src="img/chart1.png" alt="">
+                </div>
               </div>
-              <a href="#">Добавить технику</a>
-              <img src="img/frame16.svg" alt="Добавить технику">
+              <!-- <img src="img/frame16.svg" alt="Добавить технику">
               <img class="linev1" src="img/line-v.svg" alt="">
               <img class="linev2" src="img/line-v.svg" alt="">
               <img class="linev3" src="img/line-v.svg" alt="">
-              <img class="lineg" src="img/line-g.svg" alt="">
+              <img class="lineg" src="img/line-g.svg" alt=""> -->
             </div>
           </div>
           <div class="timer">
