--- a/index.html
+++ b/index.html
@@ -16,16 +16,13 @@
       <nav class="nav">
         <label for="nav-toggle" class="nav-toggle" onclick></label>
         <ul class="nav__main-menu">
-          <li><a href="#">Главная</a></li>
-          <!-- <li>
-            <a href="#">Константин<br>Константиновский</a>
-          </li> -->
+          <li><a href="/index.html">Главная</a></li>
           <li>
             <div>Константин<br>Константиновский</div>
           </li>
         </ul>
         <ul class="nav__menu">
-          <li><a href="#">Мероприятия</a></li>
+          <li><a href="/events.html">Мероприятия</a></li>
           <li><a href="#">Сотрудники</a></li>
           <li><a href="#">Заметки</a></li>
           <li><a href="#">Статистика</a></li>
@@ -56,7 +53,9 @@
       <section class="content">
         <div class="content__wrap">
           <div class="content__header">
-            <div class="content__header-left">ИП Васильев</div>
+            <div class="content__header-left">
+              <h1>ИП Васильев</h1>
+            </div>
             <div class="content__header-right">
               <div class="close"></div>
               <img src="img/gear.svg" alt="">
